--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
       rel="stylesheet"
     />
     <title>Just Plan It</title>
+    <script>
+        (function(j,ennifer) {
+            j['dmndata']=[];j['jenniferFront']=function(args){window.dmndata.push(args)};
+            j['dmnaid']=ennifer;j['dmnatime']=new Date();j['dmnanocookie']=false;j['dmnajennifer']='JENNIFER_FRONT@INTG';
+        }(window, '30ea3c6e'));
+    </script>
+    <script async src="https://d-collect.jennifersoft.com/30ea3c6e/demian.js"></script>
   </head>
   <body>
     <div id="root"></div>
